@@ -7,18 +7,18 @@ import io.vertx.core.http.Cookie;
 import io.vertx.core.http.HttpHeaders;
 import io.vertx.core.http.HttpServerResponse;
 import io.vertx.ext.web.RoutingContext;
+import io.vertx.uritemplate.UriTemplate;
+import io.vertx.uritemplate.Variables;
 import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.validator.routines.UrlValidator;
 import org.prebid.server.log.ConditionalLogger;
 import org.prebid.server.log.Logger;
 import org.prebid.server.log.LoggerFactory;
 import org.prebid.server.model.Endpoint;
 import org.prebid.server.model.HttpRequestContext;
 
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collections;
@@ -28,9 +28,6 @@ import java.util.Set;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
-/**
- * This class consists of {@code static} utility methods for operating HTTP requests.
- */
 public final class HttpUtil {
 
     private static final Logger logger = LoggerFactory.getLogger(HttpUtil.class);
@@ -82,55 +79,26 @@ public final class HttpUtil {
     public static final CharSequence SEC_CH_UA_MODEL = HttpHeaders.createOptimized("Sec-CH-UA-Model");
     public static final CharSequence SEC_CH_UA_FULL_VERSION_LIST =
             HttpHeaders.createOptimized("Sec-CH-UA-Full-Version-List");
-    public static final String MACROS_OPEN = "{{";
-    public static final String MACROS_CLOSE = "}}";
-
-    private static final UrlValidator URL_VALIDAROR = UrlValidator.getInstance();
 
     private HttpUtil() {
     }
 
-    /**
-     * Checks the input string for using as URL.
-     */
-    @Deprecated
-    public static String validateUrl(String url) {
-        if (containsMacrosses(url)) {
-            return url;
-        }
-
+    public static URL parseUrl(String url) {
         try {
-            return new URL(url).toString();
-        } catch (MalformedURLException e) {
+            return new URI(url).toURL();
+        } catch (Exception e) {
             throw new IllegalArgumentException("URL supplied is not valid: " + url, e);
         }
     }
 
-    public static String validateUrlSyntax(String url) {
-        if (containsMacrosses(url) || URL_VALIDAROR.isValid(url)) {
-            return url;
-        }
-
-        throw new IllegalArgumentException("URL supplied is not valid: " + url);
+    public static String validateUrl(String url) {
+        return parseUrl(url).toString();
     }
 
-    // TODO: We need our own way to work with url macrosses
-    private static boolean containsMacrosses(String url) {
-        return StringUtils.contains(url, MACROS_OPEN) && StringUtils.contains(url, MACROS_CLOSE);
-    }
-
-    /**
-     * Returns encoded URL for the given value.
-     * <p>
-     * The result can be safety used as the query string.
-     */
     public static String encodeUrl(String value) {
-        return URLEncoder.encode(value, StandardCharsets.UTF_8);
+        return UrlEncoder.encode(value);
     }
 
-    /**
-     * Returns decoded value if supplied is not null, otherwise returns null.
-     */
     public static String decodeUrl(String value) {
         if (StringUtils.isBlank(value)) {
             return null;
@@ -138,18 +106,12 @@ public final class HttpUtil {
         return URLDecoder.decode(value, StandardCharsets.UTF_8);
     }
 
-    /**
-     * Creates general headers for request.
-     */
     public static MultiMap headers() {
         return MultiMap.caseInsensitiveMultiMap()
                 .add(CONTENT_TYPE_HEADER, APPLICATION_JSON_CONTENT_TYPE)
                 .add(ACCEPT_HEADER, HttpHeaderValues.APPLICATION_JSON);
     }
 
-    /**
-     * Creates header from name and value, when value is not null or empty string.
-     */
     public static void addHeaderIfValueIsNotEmpty(MultiMap headers, CharSequence headerName, CharSequence headerValue) {
         if (StringUtils.isNotEmpty(headerValue)) {
             headers.add(headerName, headerValue);
@@ -160,9 +122,10 @@ public final class HttpUtil {
         if (StringUtils.isBlank(url)) {
             return null;
         }
+
         try {
-            return new URL(url).getHost();
-        } catch (MalformedURLException e) {
+            return parseUrl(url).getHost();
+        } catch (IllegalArgumentException e) {
             return null;
         }
     }
@@ -239,5 +202,15 @@ public final class HttpUtil {
 
     private static boolean isSensitiveHeader(String header) {
         return SENSITIVE_HEADERS.stream().anyMatch(header::equalsIgnoreCase);
+    }
+
+    private static class UrlEncoder {
+
+        private static final String CONTENT = "CONTENT";
+        private static final UriTemplate ENCODER = UriTemplate.of("{" + CONTENT + "}");
+
+        public static String encode(String value) {
+            return ENCODER.expandToString(Variables.variables().set(CONTENT, value));
+        }
     }
 }
